add datepicker selector

--- a/src/app/components/task-tracker/task-tracker.component.html
+++ b/src/app/components/task-tracker/task-tracker.component.html
@@ -1,5 +1,7 @@
 <p>task-tracker works!</p>
 
+<app-datepicker-selector></app-datepicker-selector>
+
 <app-datepicker></app-datepicker>
 
 <app-task-detail></app-task-detail>
